<resources>
    <string name="app_name">signinApp</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset">Reset Your Password</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Re-enter your password</string>
    <string name="submit">Submit</string>
    <string name="verification">OTP Verification</string>
    <string name="Input">Enter your OTP</string>
    <string name="Verify">Verify</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="createAccount">Create account</string>
    <string name="logout">Logout</string>
    <string name="welcome">Text to speech</string>
    <string name="Bhashini">Transform Text to Voice with Bhashini\'s Precision</string>
    <string name="otptitle">Enter your OTP here </string>
    <string name="text">Welcome to the home page!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="emailID">Email ID</string>
    <string name="confirm_password">Re-enter the password</string>
    <string name="getOTP">Get OTP</string>
    <string name="selected_language">Selected language:</string>
    <string name="select_language">Select language:</string>
    <string name="enter_the_text">Enter the text</string>
    <string name="translated_text">Translated text</string>
    <string name="synthesize">Synthesize audio</string>
    <string name="dropdown">Dropdown</string>
    <string name="language_message">Please select language</string>
    <string name="audio_bars">Audio bars</string>
    <string name="logo">Logo</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_yourself_to_get_the_access">Verify yourself to get the access.</string>
    <string name="enter_username">Enter Username</string>
    <string name="regenerate_otp">Regenerate OTP</string>
    <string name="landing_string">Enjoy fast and accurate text-to-speech \n using Bhashini’s API</string>
    <string name="enter_your_text">Enter your text input here</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="rate_experience">Rate the overall app experience</string>
    <string name="rate_sound_quality">Rate the sound quality</string>
    <string name="rate_text_to_speech_accuracy">Rate text-to-speech accuracy</string>
    <string name="rate_translation_accuracy">Rate the translation accuracy</string>
    <string name="submit_your_feedback">Submit Your Feedback</string>
    <string-array name="Languages">
        <item>--- Select language ---</item>
        <item>Assamese</item>
        <item>Bangla</item>
        <item>Gujarati</item>
        <item>Hindi</item>
        <item>Kannada</item>
        <item>Malayalam</item>
        <item>Marathi</item>
        <item>Oriya</item>
        <item>Punjabi</item>
        <item>Tamil</item>
        <item>Telugu</item>
    </string-array>
    <string-array name="Language_Code">
        <item>as</item>
        <item>bn</item>
        <item>gu</item>
        <item>hi</item>
        <item>kn</item>
        <item>ml</item>
        <item>mr</item>
        <item>or</item>
        <item>pa</item>
        <item>ta</item>
        <item>te</item>
    </string-array>
</resources>