<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/app_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPInput">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/aadhar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/otp_verification"
        android:textColor="@color/app_theme_light"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/verify_yourself_to_get_the_access"
        android:textColor="@color/app_theme_light"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        app:cardCornerRadius="40dp"
        app:cardBackgroundColor="@color/card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/otptitle"
                    android:textColor="@color/app_theme_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.chaos.view.PinView
                    android:id="@+id/pinview"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:cursorVisible="true"
                    android:gravity="center"
                    android:inputType="number"
                    android:itemBackground="@color/white"
                    app:hideLineWhenFilled="false"
                    app:itemCount="6"
                    app:itemHeight="40dp"
                    app:itemRadius="10dp"
                    app:itemWidth="40dp"
                    android:layout_marginTop="60dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text1">
                </com.chaos.view.PinView>

                <Button
                    android:id="@+id/verify"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background= "@drawable/rounded_buttons"
                    android:text="@string/Verify"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:layout_marginTop="60dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pinview" />

                <Button
                    android:id="@+id/regenerate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background= "@drawable/rounded_buttons"
                    android:text="@string/regenerate_otp"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:layout_marginTop="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/verify" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>